# YoloLabs

./: .gitignore  README.md  check_versions.py  compare_results.py  config.yaml  inspect_excel.py  label_tool.py  main.py  pyproject.toml  run_with_config.py  train.py  verification_report.md
dataset/: data.yaml
dataset/labels/: train.cache  val.cache
dataset/labels/train/: 大260202 AP7-P2設備-O-page-00001.txt  大260202 AP7-P2設備-O-page-00002.txt  大260202 AP7-P2設備-O-page-00004.txt  大260202 AP7-P2設備-O-page-00006.txt  大260202 AP7-P2設備-O-page-00007.txt  大260202 AP7-P2設備-O-page-00008.txt
dataset/labels/val/: 大260202 AP7-P2設備-O-page-00003.txt  大260202 AP7-P2設備-O-page-00005.txt
docs/: configuration_guide.md  new_images_guide.md  usage.md
excel_demo/: demo.xlsx
models/: .gitkeep
result_images/: combined_results.csv  combined_results.xlsx  大260202 AP7-P2設備-O-page-00001_results.csv  大260202 AP7-P2設備-O-page-00002_results.csv  大260202 AP7-P2設備-O-page-00003_results.csv  大260202 AP7-P2設備-O-page-00004_results.csv  大260202 AP7-P2設備-O-page-00005_results.csv  大260202 AP7-P2設備-O-page-00006_results.csv  大260202 AP7-P2設備-O-page-00007_results.csv  大260202 AP7-P2設備-O-page-00008_results.csv
runs/detect/models/circle_detector/: args.yaml  results.csv
scripts/: verify_data.py  verify_demo.py
scripts/unix/: check.sh  install.sh  label.sh  run.sh  run_all.sh  train.sh
scripts/windows/: install.bat  run_all.bat
src/: detector.py  ocr.py  sorter.py  utils.py
