[project]
name = "circle-label-detector"
version = "0.1.0"
description = "Automated circle label detection and OCR extraction system using YOLOv8 and PaddleOCR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0.0",
    "torch==2.0.1",
    "paddlepaddle>=2.5.0,<3.0.0",
    "paddleocr==2.7.3",
    "opencv-python>=4.6.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "setuptools",
    "numpy>=1.24.0,<2.0.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
